@@ -1,6 +1,9 @@
 Version 2.9 (X X, 2017) - ""
 ------------------------------------------------------------------------------
 
+*** ROM SUPPORT ***
+Clones:
+MotorDome (German)
 
 
 
